feat: create basic client environment auth flow
